--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     --------------------------------------------->
 <header>
     <section class="container-fluid bg-light mb-5">
-        <div class="d-flex flex-row justify-content-between align-items-center">
-            <div class="w-75 ms-5">
+        <div class="d-flex flex-row justify-content-between align-items-center mx-auto">
+            <div class="w-75 mx-5">
                 <h1 class="text-uppercase fw-bolder"><span class="text-warning">Be the penguin</span><br> of winter</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui accusamus aliquid harum quia non, totam distinctio omnis sapiente. Cupiditate?</p>
+                <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui accusamus aliquid harum quia non, totam distinctio omnis sapiente. Cupiditate?</p>
                 <button class="bg-success px-5 py-3 rounded-3 text-white fw-bold border-0"><i class="fas fa-cart-plus"></i> BUY NOW</button>
             </div>
-            <div> <img class="w-75 h-75" src="images/model.png" alt=""></div>
+            <div class="ms-5"> <img class="w-75 h-75" src="images/model.png" alt=""></div>
         </div>
     </section>
 </header>
