--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <section class="container-fluid bg-light mb-5">
         <div class="d-flex flex-row justify-content-between align-items-center mx-auto">
             <div class="w-75 mx-5">
-                <h1 class="text-uppercase fw-bolder"><span class="text-warning">Be the penguin</span><br> of winter</h1>
+                <h1 id="top-heading" class="text-uppercase fw-bolder"><span class="text-warning">Be the penguin</span><br> of winter</h1>
                 <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis qui accusamus aliquid harum quia non, totam distinctio omnis sapiente. Cupiditate?</p>
-                <button class="bg-success px-5 py-3 rounded-3 text-white fw-bold border-0"><i class="fas fa-cart-plus"></i> BUY NOW</button>
+                <button id="btn-buy" class="bg-success px-5 py-3 rounded-3 text-white fw-bold border-0" onclick="headChange()"><i class="fas fa-cart-plus"></i> BUY NOW</button>
             </div>
             <div class="ms-5"> <img class="w-75 h-75" src="images/model.png" alt=""></div>
         </div>
@@ -117,6 +117,7 @@
        </div>
 </section>
 </main>
+<script src="js/index.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
